Tue Apr 20 17:49:15 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
        
          Disabled generation of implied IDL operations for facets
          and receptacles if the underlying interface type is local.
          Ports using local interfaces are used only by the
          container, and not exposed to clients.

Tue Apr 20 09:47:50 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.mpc:
          Removed avoids	  

Mon Apr 19 18:33:22 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Connector_Servant_Impl_Base.h:

          Removed get_all_receptacles() and get_all_publishers(),
          since these methods are now always generated, except
          when the LwCCM flag is present.

Mon Apr 19 15:31:00 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp(visit_uses):

          Removed generation of the connect_* method if the uses type
          is a local interface. When compiling the generated *_IDL2.idl
          file, the IDL compiler will check arguments for a
          local/remote mismatch, so we skip this method (which takes
          the interface as an IN parameter) for now.

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:

          Removed the comments around the 'local' qualifier of the
          interface which produced the error mentioned above.

Mon Apr 19 14:30:09 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
        * tools/IDL3_to_IDL2/idl3p_checking_visitor.cpp:

          Added newlines to the ends of thes files.

Mon Apr 19 06:51:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.mpc:
          Add ccm_lw as base project
